--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
-    <link href="/styles/header.css" rel="stylesheet" />
-    <link href="/styles/accueil.css" rel="stylesheet" />
-    <link href="/styles/apropos.css" rel="stylesheet" />
-    <link href="/styles/separator.css" rel="stylesheet" />
-    <link href="/styles/demonstration.css" rel="stylesheet" />
-    <link href="/styles/swiper.css" rel="stylesheet" />
+    <link href="./styles/header.css" rel="stylesheet" />
+    <link href="./styles/accueil.css" rel="stylesheet" />
+    <link href="./styles/apropos.css" rel="stylesheet" />
+    <link href="./styles/separator.css" rel="stylesheet" />
+    <link href="./styles/demonstration.css" rel="stylesheet" />
+    <link href="./styles/swiper.css" rel="stylesheet" />
 
-    <link href="/styles/footer.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="assets/logo.png" />
+    <link href="./styles/footer.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="./assets/logo.png" />
   </head>
   <body>
     <header class="desktop">
@@ -41,7 +41,7 @@
         <a href="#apropos">À PROPOS</a>
         <a href="#demonstration">DÉMONSTRATION</a>
         <a href="index-en.html">
-          <img src="assets/flag_fr.png" />
+          <img src="./assets/flag_fr.png" />
         </a>
       </nav>
     </header>
@@ -50,14 +50,14 @@
       <a href="/" class="logo">
         <img src="assets/logo.png" />
       </a>
-      <img src="assets/menu.svg" class="menu" onclick="openSideNav()" />
+      <img src="./assets/menu.svg" class="menu" onclick="openSideNav()" />
     </header>
     <nav class="mobile">
       <a href="#accueil">ACCUEIL</a>
       <a href="">À PROPOS</a>
       <a href="">DÉMONSTRATION</a>
       <a href="index-en.html">
-        <img src="assets/flag_fr.png" />
+        <img src="./assets/flag_fr.png" />
       </a>
     </nav>
 
@@ -72,7 +72,7 @@
         </div>
       </div>
       <div id="headDecoration" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="600">
-        <img src="assets/headDecoration.png" />
+        <img src="./assets/headDecoration.png" />
         <div></div>
       </div>
     </section>
@@ -265,6 +265,6 @@
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
