--- a/index.html
+++ b/index.html
@@ -236,25 +236,25 @@
       <div class="swiper" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="0">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="/assets/outilsLogos/react.png" alt="ReactJs" />
+            <img src="./assets/outilsLogos/react.png" alt="ReactJs" />
           </div>
           <div class="swiper-slide">
-            <img src="/assets/outilsLogos/vite.jpg" alt="Vite" />
+            <img src="./assets/outilsLogos/vite.jpg" alt="Vite" />
           </div>
           <div class="swiper-slide">
-            <img src="/assets/outilsLogos/primeReact.png" alt="Prime React" />
+            <img src="./assets/outilsLogos/primeReact.png" alt="Prime React" />
           </div>
           <div class="swiper-slide">
-            <img src="/assets/outilsLogos/chartJs.png" alt="ChartJS" />
+            <img src="./assets/outilsLogos/chartJs.png" alt="ChartJS" />
           </div>
           <div class="swiper-slide">
-            <img src="/assets/outilsLogos/cesium.png" alt="Césium" />
+            <img src="./assets/outilsLogos/cesium.png" alt="Césium" />
           </div>
           <div class="swiper-slide">
-            <img src="/assets/outilsLogos/python.jpg" alt="Python" />
+            <img src="./assets/outilsLogos/python.jpg" alt="Python" />
           </div>
           <div class="swiper-slide">
-            <img src="/assets/outilsLogos/flask.webp" alt="Flask" />
+            <img src="./assets/outilsLogos/flask.webp" alt="Flask" />
           </div>
         </div>
       </div>
