--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
-    <link href="./styles/header.css" rel="stylesheet" />
-    <link href="./styles/accueil.css" rel="stylesheet" />
-    <link href="./styles/apropos.css" rel="stylesheet" />
-    <link href="./styles/separator.css" rel="stylesheet" />
-    <link href="./styles/demonstration.css" rel="stylesheet" />
-    <link href="./styles/swiper.css" rel="stylesheet" />
-
-    <link href="./styles/footer.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="./assets/logo.png" />
+    <link href="/styles/header.css" rel="stylesheet" />
+    <link href="/styles/accueil.css" rel="stylesheet" />
+    <link href="/styles/apropos.css" rel="stylesheet" />
+    <link href="/styles/separator.css" rel="stylesheet" />
+    <link href="/styles/demonstration.css" rel="stylesheet" />
+    <link href="/styles/swiper.css" rel="stylesheet" />
+    <link href="/styles/articlesScientifique.css" rel="stylesheet" />
+    <link href="/styles/footer.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="assets/logo.png" />
   </head>
   <body>
     <header class="desktop">
@@ -37,11 +37,11 @@
       </a>
       <nav>
         <a href="#accueil">ACCUEIL</a>
-
         <a href="#apropos">À PROPOS</a>
         <a href="#demonstration">DÉMONSTRATION</a>
+        <a href="#articlesScientifique">PUBLICATIONS SCIENTIFIQUE</a>
         <a href="index-en.html">
-          <img src="./assets/flag_fr.png" />
+          <img src="assets/flag_fr.png" />
         </a>
       </nav>
     </header>
@@ -50,14 +50,15 @@
       <a href="/" class="logo">
         <img src="assets/logo.png" />
       </a>
-      <img src="./assets/menu.svg" class="menu" onclick="openSideNav()" />
+      <img src="assets/menu.svg" class="menu" onclick="openSideNav()" />
     </header>
     <nav class="mobile">
-      <a href="#accueil">ACCUEIL</a>
-      <a href="">À PROPOS</a>
-      <a href="">DÉMONSTRATION</a>
+      <a href="#accueil" onclick="openSideNav()">ACCUEIL</a>
+      <a href="#apropos" onclick="openSideNav()">À PROPOS</a>
+      <a href="#demonstration" onclick="openSideNav()">DÉMONSTRATION</a>
+      <a href="#articlesScientifique" onclick="openSideNav()">PUBLICATIONS SCIENTIFIQUE</a>
       <a href="index-en.html">
-        <img src="./assets/flag_fr.png" />
+        <img src="assets/flag_fr.png" />
       </a>
     </nav>
 
@@ -72,7 +73,7 @@
         </div>
       </div>
       <div id="headDecoration" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="600">
-        <img src="./assets/headDecoration.png" />
+        <img src="assets/headDecoration.png" />
         <div></div>
       </div>
     </section>
@@ -182,7 +183,7 @@
           <iframe
             width="100%"
             height="400px"
-            src="https://www.youtube.com/embed/-i_TnZw9dYU?si=s3-uVVC9ygnw9ccs"
+            src="https://www.youtube.com/embed/dcq-MlnMuC0?si=s3-uVVC9ygnw9ccs"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -197,7 +198,7 @@
           <iframe
             width="100%"
             height="400px"
-            src="https://www.youtube.com/embed/-i_TnZw9dYU?si=s3-uVVC9ygnw9ccs"
+            src="https://www.youtube.com/embed/K85mqQjKuCM?si=24och_4Iv8Ge1rtF"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -236,35 +237,107 @@
       <div class="swiper" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="0">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="./assets/outilsLogos/react.png" alt="ReactJs" />
+            <img src="/assets/outilsLogos/react.png" alt="ReactJs" />
           </div>
           <div class="swiper-slide">
-            <img src="./assets/outilsLogos/vite.jpg" alt="Vite" />
+            <img src="/assets/outilsLogos/vite.jpg" alt="Vite" />
           </div>
           <div class="swiper-slide">
-            <img src="./assets/outilsLogos/primeReact.png" alt="Prime React" />
+            <img src="/assets/outilsLogos/primeReact.png" alt="Prime React" />
           </div>
           <div class="swiper-slide">
-            <img src="./assets/outilsLogos/chartJs.png" alt="ChartJS" />
+            <img src="/assets/outilsLogos/chartJs.png" alt="ChartJS" />
           </div>
           <div class="swiper-slide">
-            <img src="./assets/outilsLogos/cesium.png" alt="Césium" />
+            <img src="/assets/outilsLogos/cesium.png" alt="Césium" />
           </div>
           <div class="swiper-slide">
-            <img src="./assets/outilsLogos/python.jpg" alt="Python" />
+            <img src="/assets/outilsLogos/python.jpg" alt="Python" />
           </div>
           <div class="swiper-slide">
-            <img src="./assets/outilsLogos/flask.webp" alt="Flask" />
+            <img src="/assets/outilsLogos/flask.webp" alt="Flask" />
           </div>
         </div>
       </div>
     </section>
 
+    <section id="articlesScientifique">
+      <div
+        class="separatorContainer"
+        data-aos="fade-up"
+        data-aos-duration="1200"
+        data-aos-delay="0"
+      >
+        <div class="separator"></div>
+        <div class="separatorName">
+          <p>PUBLICATIONS SCIENTIFIQUE</p>
+        </div>
+      </div>
+
+      <div id="articlesContainer">
+        <div class="articles">
+          <div data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">
+            <a href="/" class="article">
+              <img src="./assets/headDecoration.png" />
+              <div class="articleInfos">
+                <div class="articleHeader">
+                  <div class="articleHeaderDecoration"></div>
+                  <div class="publicationDate">06/06/2025</div>
+                </div>
+                <div class="articleContent">
+                  <h2>TITRE DE L’ARTICLE EN MAJUSCULE AVEC LE TEXT DÉCALÉ SUR LA GAUCHE</h2>
+                  <p>Court résumé de l’article scientifique ou l’abstract, à voir.</p>
+                  <p class="author">Écrit par : Auteur</p>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div data-aos="fade-up" data-aos-duration="1200" data-aos-delay="400">
+            <a href="/" class="article">
+              <img src="./assets/headDecoration.png" />
+              <div class="articleInfos">
+                <div class="articleHeader">
+                  <div class="articleHeaderDecoration"></div>
+                  <div class="publicationDate">06/06/2025</div>
+                </div>
+                <div class="articleContent">
+                  <h2>TITRE DE L’ARTICLE EN MAJUSCULE AVEC LE TEXT DÉCALÉ SUR LA GAUCHE</h2>
+                  <p>Court résumé de l’article scientifique ou l’abstract, à voir.</p>
+                  <p class="author">Écrit par : Auteur</p>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="articles">
+          <div data-aos="fade-up" data-aos-duration="1200" data-aos-delay="600">
+            <a href="/" class="article">
+              <img src="./assets/headDecoration.png" />
+              <div class="articleInfos">
+                <div class="articleHeader">
+                  <div class="articleHeaderDecoration"></div>
+                  <div class="publicationDate">06/06/2025</div>
+                </div>
+                <div class="articleContent">
+                  <h2>TITRE DE L’ARTICLE EN MAJUSCULE AVEC LE TEXT DÉCALÉ SUR LA GAUCHE</h2>
+                  <p>Court résumé de l’article scientifique ou l’abstract, à voir.</p>
+                  <p class="author">Écrit par : Auteur</p>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div data-aos="fade-up" data-aos-duration="1200" data-aos-delay="800">
+            <div class="article filler"></div>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer>
       <p>©Université Gustave Eiffel - 2025</p>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="./index.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
