--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
-    <link href="/styles/header.css" rel="stylesheet" />
-    <link href="/styles/accueil.css" rel="stylesheet" />
-    <link href="/styles/apropos.css" rel="stylesheet" />
-    <link href="/styles/separator.css" rel="stylesheet" />
-    <link href="/styles/demonstration.css" rel="stylesheet" />
-    <link href="/styles/swiper.css" rel="stylesheet" />
-    <link href="/styles/articlesScientifique.css" rel="stylesheet" />
-    <link href="/styles/footer.css" rel="stylesheet" />
+    <link href="./styles/header.css" rel="stylesheet" />
+    <link href="./styles/accueil.css" rel="stylesheet" />
+    <link href="./styles/apropos.css" rel="stylesheet" />
+    <link href="./styles/separator.css" rel="stylesheet" />
+    <link href="./styles/demonstration.css" rel="stylesheet" />
+    <link href="./styles/swiper.css" rel="stylesheet" />
+    <link href="./styles/articlesScientifique.css" rel="stylesheet" />
+    <link href="./styles/footer.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="assets/logo.png" />
   </head>
   <body>
@@ -47,7 +47,7 @@
     </header>
 
     <header class="mobile">
-      <a href="/" class="logo">
+      <a href="./" class="logo">
         <img src="assets/logo.png" />
       </a>
       <img src="assets/menu.svg" class="menu" onclick="openSideNav()" />
@@ -237,25 +237,25 @@
       <div class="swiper" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="0">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="/assets/outilsLogos/react.png" alt="ReactJs" />
+            <img src="./assets/outilsLogos/react.png" alt="ReactJs" />
           </div>
           <div class="swiper-slide">
-            <img src="/assets/outilsLogos/vite.jpg" alt="Vite" />
+            <img src="./assets/outilsLogos/vite.jpg" alt="Vite" />
           </div>
           <div class="swiper-slide">
-            <img src="/assets/outilsLogos/primeReact.png" alt="Prime React" />
+            <img src="./assets/outilsLogos/primeReact.png" alt="Prime React" />
           </div>
           <div class="swiper-slide">
-            <img src="/assets/outilsLogos/chartJs.png" alt="ChartJS" />
+            <img src="./assets/outilsLogos/chartJs.png" alt="ChartJS" />
           </div>
           <div class="swiper-slide">
-            <img src="/assets/outilsLogos/cesium.png" alt="Césium" />
+            <img src="./assets/outilsLogos/cesium.png" alt="Césium" />
           </div>
           <div class="swiper-slide">
-            <img src="/assets/outilsLogos/python.jpg" alt="Python" />
+            <img src="./assets/outilsLogos/python.jpg" alt="Python" />
           </div>
           <div class="swiper-slide">
-            <img src="/assets/outilsLogos/flask.webp" alt="Flask" />
+            <img src="./assets/outilsLogos/flask.webp" alt="Flask" />
           </div>
         </div>
       </div>
@@ -277,7 +277,7 @@
       <div id="articlesContainer">
         <div class="articles">
           <div data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">
-            <a href="/" class="article">
+            <a href="./" class="article">
               <img src="./assets/headDecoration.png" />
               <div class="articleInfos">
                 <div class="articleHeader">
@@ -294,7 +294,7 @@
           </div>
 
           <div data-aos="fade-up" data-aos-duration="1200" data-aos-delay="400">
-            <a href="/" class="article">
+            <a href="./" class="article">
               <img src="./assets/headDecoration.png" />
               <div class="articleInfos">
                 <div class="articleHeader">
@@ -312,7 +312,7 @@
         </div>
         <div class="articles">
           <div data-aos="fade-up" data-aos-duration="1200" data-aos-delay="600">
-            <a href="/" class="article">
+            <a href="./" class="article">
               <img src="./assets/headDecoration.png" />
               <div class="articleInfos">
                 <div class="articleHeader">
@@ -338,6 +338,6 @@
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
