--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body>
     <header class="desktop">
       <a href="#accueil" class="logo">
-        <img src="assets/logo.png" />
+        <img src="./assets/logo2.png" />
       </a>
       <nav>
         <a href="#accueil">ACCUEIL</a>
@@ -41,16 +41,16 @@
         <a href="#demonstration">DÉMONSTRATION</a>
         <a href="#articlesScientifique">PUBLICATIONS SCIENTIFIQUE</a>
         <a href="index-en.html">
-          <img src="assets/flag_fr.png" />
+          <img src="./assets/flag_fr.png" />
         </a>
       </nav>
     </header>
 
     <header class="mobile">
       <a href="./" class="logo">
-        <img src="assets/logo.png" />
+        <img src="./assets/logo2.png" />
       </a>
-      <img src="assets/menu.svg" class="menu" onclick="openSideNav()" />
+      <img src="./assets/menu.svg" class="menu" onclick="openSideNav()" />
     </header>
     <nav class="mobile">
       <a href="#accueil" onclick="openSideNav()">ACCUEIL</a>
@@ -58,7 +58,7 @@
       <a href="#demonstration" onclick="openSideNav()">DÉMONSTRATION</a>
       <a href="#articlesScientifique" onclick="openSideNav()">PUBLICATIONS SCIENTIFIQUE</a>
       <a href="index-en.html">
-        <img src="assets/flag_fr.png" />
+        <img src="./assets/flag_fr.png" />
       </a>
     </nav>
 
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div id="headDecoration" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="600">
-        <img src="assets/headDecoration.png" />
+        <img src="./assets/headDecoration.png" />
         <div></div>
       </div>
     </section>
