--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link href="./styles/swiper.css" rel="stylesheet" />
     <link href="./styles/articlesScientifique.css" rel="stylesheet" />
     <link href="./styles/footer.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="assets/logo.png" />
+    <link rel="icon" type="image/x-icon" href="./assets/logo2.png" />
   </head>
   <body>
     <header class="desktop">
