--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <a href="#accueil">ACCUEIL</a>
         <a href="#apropos">À PROPOS</a>
         <a href="#demonstration">DÉMONSTRATION</a>
-        <a href="#articlesScientifique">PUBLICATIONS SCIENTIFIQUE</a>
-        <a href="index-en.html">
-          <img src="./assets/flag_fr.png" />
+        <a href="#articlesScientifique">PUBLICATIONS</a>
+        <a href="index-en.html" class="flag">
+          <img src="./assets/flag_en.png" />
         </a>
       </nav>
     </header>
@@ -56,15 +56,15 @@
       <a href="#accueil" onclick="openSideNav()">ACCUEIL</a>
       <a href="#apropos" onclick="openSideNav()">À PROPOS</a>
       <a href="#demonstration" onclick="openSideNav()">DÉMONSTRATION</a>
-      <a href="#articlesScientifique" onclick="openSideNav()">PUBLICATIONS SCIENTIFIQUE</a>
+      <a href="#articlesScientifique" onclick="openSideNav()">PUBLICATIONS</a>
       <a href="index-en.html">
-        <img src="./assets/flag_fr.png" />
+        <img src="./assets/flag_en.png" />
       </a>
     </nav>
 
     <section id="accueil">
       <div id="head">
-        <h1 data-aos="fade-up" data-aos-duration="1200" data-aos-delay="0">Digital Twin</h1>
+        <h1 data-aos="fade-up" data-aos-duration="1200" data-aos-delay="0">Jumeau Numérique</h1>
         <h2 data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">
           Platforme de jumeau numérique
         </h2>
@@ -182,7 +182,7 @@
         <div class="demoVideo" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="400">
           <iframe
             width="100%"
-            height="400px"
+            height="100%"
             src="https://www.youtube.com/embed/dcq-MlnMuC0?si=s3-uVVC9ygnw9ccs"
             title="YouTube video player"
             frameborder="0"
@@ -270,7 +270,7 @@
       >
         <div class="separator"></div>
         <div class="separatorName">
-          <p>PUBLICATIONS SCIENTIFIQUE</p>
+          <p>PUBLICATIONS</p>
         </div>
       </div>
 
