--- a/index-en.html
+++ b/index-en.html
@@ -270,12 +270,29 @@
       >
         <div class="separator"></div>
         <div class="separatorName">
-          <p>PUBLICATIONS SCIENTIFIQUE</p>
+          <p>PUBLICATIONS</p>
         </div>
       </div>
 
       <div id="articlesContainer">
         <div class="articles">
+          <div data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">
+            <a href="./" class="article">
+              <img src="./assets/headDecoration.png" />
+              <div class="articleInfos">
+                <div class="articleHeader">
+                  <div class="articleHeaderDecoration"></div>
+                  <div class="publicationDate">06/06/2025</div>
+                </div>
+                <div class="articleContent">
+                  <h2>TITRE DE L’ARTICLE EN MAJUSCULE AVEC LE TEXT DÉCALÉ SUR LA GAUCHE</h2>
+                  <p>Court résumé de l’article scientifique ou l’abstract, à voir.</p>
+                  <p class="author">Écrit par : Auteur</p>
+                </div>
+              </div>
+            </a>
+          </div>
+
           <div data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">
             <a href="./" class="article">
               <img src="./assets/headDecoration.png" />
@@ -326,6 +343,9 @@
                 </div>
               </div>
             </a>
+          </div>
+          <div data-aos="fade-up" data-aos-duration="1200" data-aos-delay="800">
+            <div class="article filler"></div>
           </div>
           <div data-aos="fade-up" data-aos-duration="1200" data-aos-delay="800">
             <div class="article filler"></div>
