--- a/index-en.html
+++ b/index-en.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mobili'Twin</title>
+    <title>eRoadMontBlanc</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -66,7 +66,7 @@
 
     <section id="accueil">
       <div id="head">
-        <h1 data-aos="fade-up" data-aos-duration="1200" data-aos-delay="0">Mobili'Twin</h1>
+        <h1 data-aos="fade-up" data-aos-duration="1200" data-aos-delay="0">eRoadMontBlanc</h1>
         <h2 data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">
           Digital Twin platform
         </h2>
@@ -456,3 +456,4 @@
     <script src="./index.js"></script>
   </body>
 </html>
+
