--- a/index-en.html
+++ b/index-en.html
@@ -60,11 +60,11 @@
     </header>
 
     <nav class="mobile">
-      <a href="#accueil" onclick="openSideNav()">Home</a>
-      <a href="#apropos" onclick="openSideNav()">About</a>
-      <a href="#demonstration" onclick="openSideNav()">Demonstration</a>
-      <a href="#actuEvent" onclick="openSideNav()">News & Events</a>
-      <a href="#articlesScientifique" onclick="openSideNav()">Scientific Publications</a>
+      <a href="#accueil">Home</a>
+      <a href="#apropos">About</a>
+      <a href="#demonstration">Demonstration</a>
+      <a href="#actuEvent">News & Events</a>
+      <a href="#articlesScientifique">Scientific Publications</a>
       <a href="index.html">
         <img src="./assets/flag_fr.png" />
       </a>
@@ -72,22 +72,22 @@
 
     <section id="accueil">
       <div id="head">
-        <h1 data-aos="fade-up">eRoadMontBlanc</h1>
-        <h2 data-aos="fade-up" data-aos-delay="200">
+        <h1 data-aos="fade-up" data-aos-duration="1200">eRoadMontBlanc</h1>
+        <h2 data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">
           Digital Twin Platform
         </h2>
-        <div data-aos="fade-up" data-aos-delay="400">
+        <div data-aos="fade-up" data-aos-duration="1200" data-aos-delay="400">
           <button>ACCESS THE PLATFORM</button>
         </div>
       </div>
-      <div id="headDecoration" data-aos="fade-up" data-aos-delay="600">
+      <div id="headDecoration" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="600">
         <img src="./assets/headDecoration.png" />
         <div></div>
       </div>
     </section>
 
     <section id="apropos">
-      <div class="separatorContainer" data-aos="fade-up">
+      <div class="separatorContainer" data-aos="fade-up" data-aos-duration="1200" data-aos-delay="800">
         <div class="separator"></div>
         <div class="separatorName">
           <p>ABOUT</p>
@@ -95,7 +95,7 @@
       </div>
 
       <div id="infosContainer">
-        <div>
+        <div data-aos="fade-up" data-aos-duration="1200">
           <div class="infoContainer">
             <div class="decoration"></div>
             <div class="info">
@@ -108,27 +108,27 @@
           </div>
         </div>
 
-        <div>
+        <div data-aos="fade-up" data-aos-duration="1200" data-aos-delay="200">
           <div class="infoContainer">
             <div class="decoration"></div>
             <div class="info">
               <h3>Interaction</h3>
               <p>
-                Data analysis allows automated or assisted actions on the physical system
-                when predefined conditions or thresholds are reached.
+                Data analysis enables automated or assisted actions on the physical system
+                when predefined thresholds or conditions are reached.
               </p>
             </div>
           </div>
         </div>
 
-        <div>
+        <div data-aos="fade-up" data-aos-duration="1200" data-aos-delay="400">
           <div class="infoContainer">
             <div class="decoration"></div>
             <div class="info">
               <h3>Simulation</h3>
               <p>
-                Extracted data can be used to run simulations and study system behavior
-                under various parameters and scenarios.
+                Collected data can be used to run simulations and study system behavior
+                under different parameters and scenarios.
               </p>
             </div>
           </div>
@@ -344,6 +344,19 @@
         </div>
       </div>
     </section>
+
+    <div class="swiper" data-aos="fade-up" data-aos-duration="1200">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide"><img src="./assets/outilsLogos/react.png" alt="React" /></div>
+        <div class="swiper-slide"><img src="./assets/outilsLogos/vite.jpg" alt="Vite" /></div>
+        <div class="swiper-slide"><img src="./assets/outilsLogos/primeReact.png" alt="PrimeReact" /></div>
+        <div class="swiper-slide"><img src="./assets/outilsLogos/chartJs.png" alt="ChartJS" /></div>
+        <div class="swiper-slide"><img src="./assets/outilsLogos/cesium.png" alt="Cesium" /></div>
+        <div class="swiper-slide"><img src="./assets/outilsLogos/python.jpg" alt="Python" /></div>
+        <div class="swiper-slide"><img src="./assets/outilsLogos/flask.webp" alt="Flask" /></div>
+        <div class="swiper-slide"><img src="./assets/outilsLogos/fiware.png" alt="FIWARE" /></div>
+      </div>
+    </div>
 
     <footer>
       <p>© Universite Gustave Eiffel - 2025</p>
